--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 04:06 -->
+<!-- 2025-05-26 Mon 04:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</title>
@@ -196,13 +196,15 @@
 <link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
+<div id="preamble" class="status">
+<p class='nav-home'><a href='/index.html'>← Home</a></p>
+</div>
 <div id="content" class="content">
 <h1 class="title">NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar)</h1>
 <div id="outline-container-org034894b" class="outline-2">
 <h2 id="org034894b"><span class="section-number-2">1.</span> Sitemap</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
-<li><a href="header.html">header</a></li>
 <li><a href="index.html">NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar)</a></li>
 <li>history
 <ul class="org-ul">
@@ -403,7 +405,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 04:06</p>
+<p class="date">Created: 2025-05-26 Mon 04:24</p>
 </div>
 </body>
 </html>
