--- a/xeet/politics/meme-theory/deserve.html
+++ b/xeet/politics/meme-theory/deserve.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 04:05 -->
+<!-- 2025-05-26 Mon 04:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Deserve</title>
@@ -196,6 +196,9 @@
 <link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
+<div id="preamble" class="status">
+<p class='nav-home'><a href='/index.html'>← Home</a></p>
+</div>
 <div id="content" class="content">
 <h1 class="title">Deserve</h1>
 <div id="table-of-contents" role="doc-toc">
@@ -245,7 +248,7 @@ You need to be figuring out how to spin situations into your advantage. You must
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 04:05</p>
+<p class="date">Created: 2025-05-26 Mon 04:24</p>
 </div>
 </body>
 </html>
