--- a/xeet/timepass/prophecy.html
+++ b/xeet/timepass/prophecy.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-26 Mon 04:05 -->
+<!-- 2025-05-26 Mon 04:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>prophecy</title>
@@ -196,13 +196,16 @@
 <link rel="stylesheet" href="/styles.css"">
 </head>
 <body>
+<div id="preamble" class="status">
+<p class='nav-home'><a href='/index.html'>← Home</a></p>
+</div>
 <div id="content" class="content">
 <h1 class="title">prophecy</h1>
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1829753986943238421">Twitter</a></p>
 </p>
 
-<pre class="example" id="org1e75ae8">
+<pre class="example" id="org9e9d1fb">
 &gt; originate in Maharashtra 
 &gt; immediately gain some Southern holdings 
 &gt; Prosperity &amp; Hindoo unity
@@ -218,7 +221,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-26 Mon 04:05</p>
+<p class="date">Created: 2025-05-26 Mon 04:24</p>
 </div>
 </body>
 </html>
