mv stuff around

--- a/sitemap.html
+++ b/sitemap.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-06-01 Sun 07:12 -->
+<!-- 2025-06-01 Sun 07:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sitemap of srajma.github.io</title>
@@ -326,6 +326,7 @@
 <li><a href="xeet/politics/things-are-hard-pill/2024_election.html">2024 lok sabha post-election thread</a></li>
 <li><a href="xeet/politics/things-are-hard-pill/masterstroke.html">Anti-masterstroking thread</a></li>
 <li><a href="xeet/politics/things-are-hard-pill/reign_of_terror.html">Reign Of Terror</a></li>
+<li><a href="xeet/politics/things-are-hard-pill/things_are_hard_pill.html">Things Are Hard Pill</a></li>
 <li><a href="xeet/politics/things-are-hard-pill/why_no_tandav.html">Why No Tandav</a></li>
 </ul></li>
 <li>understanding-libs
@@ -363,7 +364,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-06-01 Sun 07:12</p>
+<p class="date">Created: 2025-06-01 Sun 07:16</p>
 </div>
 </body>
 </html>
