add substack and twitter links to thing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-13 Wed 20:52 -->
+<!-- 2025-08-13 Wed 21:02 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</title>
@@ -368,7 +368,21 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 <li><a href="https://bharadvajatmaja.substack.com/">Shailesh Bharadwaj</a></li>
 <li>Vishvas Vasuki: <a href="https://vishvasa.github.io/">website</a>, <a href="https://github.com/sanskrit/gotra-haplogroup/tree/master">gotra haplogroup proj</a>, <a href="https://github.com/indic-dict/stardict-sanskrit/blob/master/sa-head/en-entries/MT-paribhAShA/MT-paribhAShA.babylon">mānasataraṅginī dictionary</a></li>
 </ul></li>
+<li>International politics blogs
+<ul class="org-ul">
+<li><a href="https://lymanstone.substack.com/">Lyman Stone</a>
+<ul class="org-ul">
+<li><a href="https://lymanstone.substack.com/p/there-is-no-long-decline-in-fertility">Long-term trends in fertility</a> (disagree with his claim, but it&rsquo;s a good post)</li>
+</ul></li>
+<li><a href="https://randomcriticalanalysis.com/">Random Critical Analysis</a>
+<ul class="org-ul">
+<li><a href="https://randomcriticalanalysis.com/why-conventional-wisdom-on-health-care-is-wrong-a-primer/">Primer on fundamental misconceptions about US healthcare</a></li>
+</ul></li>
+</ul></li>
+<li>Indian politics blogs
+<ul class="org-ul">
 <li><a href="https://theemissary.co/">The Emissary</a></li>
+</ul></li>
 </ul>
 </div>
 </div>
@@ -388,7 +402,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-13 Wed 20:52</p>
+<p class="date">Created: 2025-08-13 Wed 21:02</p>
 </div>
 </body>
 </html>
