--- a/politics/leli-raj/world_model.html
+++ b/politics/leli-raj/world_model.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-13 Wed 20:52 -->
+<!-- 2025-08-13 Wed 21:01 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>World models</title>
@@ -250,14 +250,14 @@ Playing with this kind of world model is like playing TrapAdventure2.
 </p>
 
 
-<div id="org6b23043" class="figure">
+<div id="org37e52fc" class="figure">
 <p><img src="https://media.tenor.com/QFifHQQEfU4AAAAN/kirbys-adventure-kirby.png" alt="kirbys-adventure-kirby.png" />
 </p>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-13 Wed 20:52</p>
+<p class="date">Created: 2025-08-13 Wed 21:01</p>
 </div>
 </body>
 </html>
