--- a/politics/timepass.html
+++ b/politics/timepass.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-13 Wed 20:52 -->
+<!-- 2025-08-13 Wed 21:02 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Timepass</title>
@@ -566,7 +566,7 @@ Israel is TempleOS. God&rsquo;s temple is finished. Now, God kills CIA until it 
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1829753986943238421">Twitter</a></p>
 </p>
 
-<pre class="example" id="org8d466c9">
+<pre class="example" id="org2b5d4c4">
 &gt; originate in Maharashtra
 &gt; immediately gain some Southern holdings
 &gt; Prosperity &amp; Hindoo unity
@@ -627,7 +627,7 @@ A player with a Pakistan flag spawning in the Indus valley spent his entire time
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-13 Wed 20:52</p>
+<p class="date">Created: 2025-08-13 Wed 21:02</p>
 </div>
 </body>
 </html>
