add substack and twitter links to thing

--- a/politics/new-arya-man/sankhya.html
+++ b/politics/new-arya-man/sankhya.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-13 Wed 21:02 -->
+<!-- 2025-08-13 Wed 21:08 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The 13 Commandments for the NEW ĀRYA MAN and other enumerations ⭐</title>
@@ -207,9 +207,9 @@
 <ul>
 <li><a href="#org6d4ee77">1. The Four Skills</a></li>
 <li><a href="#org70f9447">2. The 13 commandments for the NEW ĀRYA MAN</a></li>
-<li><a href="#orgfc5e3fc">3. Good cliches</a>
+<li><a href="#org265b600">3. Good cliches</a>
 <ul>
-<li><a href="#org6e660b8">3.1. Good cliches</a>
+<li><a href="#orgfc5e3fc">3.1. Good cliches</a>
 <ul>
 <li><a href="#orgc8f9651">3.1.1. Knowledge is power; knowledge cannot be bought</a></li>
 <li><a href="#orgbb19407">3.1.2. Actions speak louder than words</a></li>
@@ -305,15 +305,15 @@ and always ask yourself &ldquo;What would NiṣādaHermaphroditarchaṃśa (Mal&
 </p>
 </div>
 </div>
-<div id="outline-container-orgfc5e3fc" class="outline-2">
-<h2 id="orgfc5e3fc"><span class="section-number-2">3.</span> Good cliches</h2>
+<div id="outline-container-org265b600" class="outline-2">
+<h2 id="org265b600"><span class="section-number-2">3.</span> Good cliches</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1937948811818832154">Twitter</a></p>
 </p>
 </div>
-<div id="outline-container-org6e660b8" class="outline-3">
-<h3 id="org6e660b8"><span class="section-number-3">3.1.</span> Good cliches</h3>
+<div id="outline-container-orgfc5e3fc" class="outline-3">
+<h3 id="orgfc5e3fc"><span class="section-number-3">3.1.</span> Good cliches</h3>
 <div class="outline-text-3" id="text-3-1">
 </div>
 <div id="outline-container-orgc8f9651" class="outline-4">
@@ -374,7 +374,7 @@ and always ask yourself &ldquo;What would NiṣādaHermaphroditarchaṃśa (Mal&
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-13 Wed 21:02</p>
+<p class="date">Created: 2025-08-13 Wed 21:08</p>
 </div>
 </body>
 </html>
