--- a/history/hinduism/tolerance.html
+++ b/history/hinduism/tolerance.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-13 Wed 21:01 -->
+<!-- 2025-08-13 Wed 21:08 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Is Hinduism tolerant? Is it Nihilistic?</title>
@@ -213,6 +213,11 @@
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://srajma.substack.com/p/is-hinduism-tolerant-is-it-nihilistic">Substack</a></p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1955575549042282582">Twitter</a></p>
+</p>
+
 <p>
 TL;DR &#x2014; there are certain non-negotiable core Hindu values; apart from that, there is a lot of tolerance in transient cultural elements (including pantheons), and also complete openness to new scientific knowledge regardless of authority.
 </p>
@@ -485,7 +490,7 @@ At this point this post has turned essentially into a brief overview of Hinduism
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-13 Wed 21:01</p>
+<p class="date">Created: 2025-08-13 Wed 21:08</p>
 </div>
 </body>
 </html>
