update timepass page

--- a/history/stories.html
+++ b/history/stories.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-13 Wed 21:08 -->
+<!-- 2025-08-14 Thu 02:45 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Stories</title>
@@ -228,7 +228,7 @@ All of it comes from running an enormous trade surplus with Rome &amp; Suvarṇa
 
 <p>
 <img src="/img/maps/gold_1.png" alt="gold_1.png" />
-<img src="/img/maps/gold_2.png" alt="gold_2.png" />
+<img src="/img/maps/gold_2.jpeg" alt="gold_2.jpeg" />
 </p>
 
 <p>
@@ -328,7 +328,7 @@ Here the tale takes a somewhat mythical twist: the merchants travel first to the
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-13 Wed 21:08</p>
+<p class="date">Created: 2025-08-14 Thu 02:45</p>
 </div>
 </body>
 </html>
