--- a/politics/timepass.html
+++ b/politics/timepass.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-13 Wed 21:08 -->
+<!-- 2025-08-14 Thu 02:45 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Timepass</title>
@@ -253,6 +253,8 @@
 <li><a href="#org3ed5dc1">14. Optimal Robot</a></li>
 <li><a href="#orga4a4bce">15. Sanjay Gandhi</a></li>
 <li><a href="#org5ed7e0c">16. WAR game</a></li>
+<li><a href="#org58dd7c7">17. Is it because &#x2026;</a></li>
+<li><a href="#orgfd33e31">18. never question the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought</a></li>
 </ul>
 </div>
 </div>
@@ -566,7 +568,7 @@ Israel is TempleOS. God&rsquo;s temple is finished. Now, God kills CIA until it 
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1829753986943238421">Twitter</a></p>
 </p>
 
-<pre class="example" id="orgfabf757">
+<pre class="example" id="org9811659">
 &gt; originate in Maharashtra
 &gt; immediately gain some Southern holdings
 &gt; Prosperity &amp; Hindoo unity
@@ -624,10 +626,244 @@ A player with a Pakistan flag spawning in the Indus valley spent his entire time
 </p>
 </div>
 </div>
+<div id="outline-container-org58dd7c7" class="outline-2">
+<h2 id="org58dd7c7"><span class="section-number-2">17.</span> Is it because &#x2026;</h2>
+<div class="outline-text-2" id="text-17">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1938880809483866442">Twitter</a></p>
+Why does German not sound funny like Dutch? Is it because they did the holocaust?
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1939888189243564201">Twitter</a></p>
+Why are so many people obsessed with Napoleon, a guy whose impact on history is practically negligible? Is it because they are short like him?
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1940609437322170461">Twitter</a></p>
+why is this absolute banger so underrated? Is it because people don&rsquo;t know pigs live in sewers? Have they not seen sewers? Do they shit in their living rooms? Are they environmentalists?
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1945296311621730358">Twitter</a></p>
+How do Russians not suffer from al-Beruni complex
+</p>
+
+<p>
+Is it because, despite how powerful the Soviet Union was, communism still sucked and they hated it?
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1954027888065523833">Twitter</a></p>
+Why did the plebs never rebel against their elites in feudal times, but keep doing so in industrial times
+</p>
+
+<p>
+Is it because they are chagnon-pilled
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1954841647369351492">Twitter</a></p>
+why is every foidinist account named after a food item
+</p>
+
+<p>
+is it because they yearn for the kitchen
+</p>
+</div>
+</div>
+<div id="outline-container-orgfd33e31" class="outline-2">
+<h2 id="orgfd33e31"><span class="section-number-2">18.</span> never question the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought</h2>
+<div class="outline-text-2" id="text-18">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1922701558078201996">Twitter</a></p>
+Never question the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought.
+</p>
+
+<blockquote>
+<p>
+<a href="https://x.com/real_mahalingam/status/1922242144271577422">https://x.com/real_mahalingam/status/1922242144271577422</a>
+Common theme is clear; yes he&rsquo;s definitely been bought, and probably by multiple interest groups (Qatar, China, American Deep State).
+</p>
+
+<p>
+Question is if anyone on our side can counter the offer or at least put our stake in.
+</p>
+</blockquote>
+
+<blockquote>
+<p>
+<a href="https://x.com/adityakalra/status/1922650814515937712">https://x.com/adityakalra/status/1922650814515937712</a>
+Indian billionaire Mukesh Ambani will meet U.S. President Donald Trump and Qatar&rsquo;s emir in Doha on Wednesday, two sources said. Another London-based Indian business leader close to the Trump and Qatar administrations will also attend
+</p>
+</blockquote>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1928709612741472501">Twitter</a></p>
+Why did you ever doubt the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought
+</p>
+
+<blockquote>
+<p>
+<a href="https://x.com/real_mahalingam/status/1925698552904261825">https://x.com/real_mahalingam/status/1925698552904261825</a>
+My guess is Elon was really aiming for the NGO-left Nexus but Trump &amp; others in govt don&rsquo;t understand this and expect him to miraculously cut the deficit and he&rsquo;s scrambling
+</p>
+</blockquote>
+
+<blockquote>
+<p>
+<a href="https://x.com/Noahpinion/status/1928695648179662993">https://x.com/Noahpinion/status/1928695648179662993</a>
+Wait, Trump actually thought DOGE was going to cut trillions of dollars of government spending?!!! He didn&rsquo;t just think it was a rhetorical cover for an ideological purge???
+</p>
+</blockquote>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1950654666020471247">Twitter</a></p>
+WHAT DID I TELL YOU.
+</p>
+
+<blockquote>
+<p>
+<a href="https://x.com/real_mahalingam/status/1926078225769283901">https://x.com/real_mahalingam/status/1926078225769283901</a>
+</p>
+
+<p>
+Modi must invite Trump to India ASAP, do a Gujju-maxxed laser-projector show on the Taj Mahal for him. Show him all the news about Pakistan discovering OIL DEPOSITS and doing nothing with them (!!) Announce the BIG, BEAUTIFUL JOINT AMERICAN-INDIAN PLAN FOR THE SECOND BARBARY WAR!
+</p>
+
+<p>
+<img src="/img/art/india_us_summit/2.png" alt="2.png" />
+</p>
+</blockquote>
+
+<blockquote>
+<p>
+BREAKING 🚨 US President Trump says a deal has been concluded with Pakistan; both countries will jointly develop Pakistan’s &ldquo;massive oil reserves&rdquo;
+</p>
+</blockquote>
+
+<p>
+&#x2026; never, ever doubt the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1953264707877650501">Twitter</a></p>
+Why did I ever doubt the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought
+</p>
+
+<p>
+(I didn&rsquo;t elaborate, but &ldquo;stupid big-braining&rdquo; here referred exactly to the idea of trying to &ldquo;use&rdquo; your far-more powerful enemies to collect material haftā from non-enemies.)
+</p>
+
+<p>
+&ldquo;Zoomer energy&rdquo; was still right tho
+</p>
+
+<blockquote>
+<p>
+<a href="https://x.com/real_mahalingam/status/1905755941791826222">https://x.com/real_mahalingam/status/1905755941791826222</a>
+I was expecting Trump &amp; co to fail in all the usual mid ways RWs do (boomer energy, stupid big-braining &amp; lack of śatrubodha, being too nice).
+</p>
+
+<p>
+He does A+ on all of that, pleasant surprise, but then instead invades Greenland and crashes the global economy. Zoomer energy.
+</p>
+</blockquote>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1948105991553462287">Twitter</a></p>
+NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought validated again.
+</p>
+
+<blockquote>
+<p>
+<a href="https://x.com/real_mahalingam/status/1928466466761838593">https://x.com/real_mahalingam/status/1928466466761838593</a>
+This region is where the Faustian spirit peaks globally. Nowhere else is the Great Man theory more valid than here.
+</p>
+
+<p>
+Go a bit East and you get studious city-building Institutionalists. Go a bit West and you get allah-khair allah-khair bouncy-bouncy femboys.
+<img src="/img/maps/faustian.png" alt="faustian.png" />
+</p>
+</blockquote>
+
+<p>
+[femboy<sub>density</sub><sub>map</sub>]
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1953286830738297252">Twitter</a></p>
+</p>
+
+<p>
+NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought vindicated again.
+</p>
+
+<blockquote>
+<p>
+<a href="https://x.com/real_mahalingam/status/1927215435205714390">https://x.com/real_mahalingam/status/1927215435205714390</a>
+Just realized Lolbert&rsquo;s tweeting style is basically Trump without the all caps. Can&rsquo;t unsee it now lol.
+</p>
+
+<p>
+<img src="/img/memes/lolbert.jpeg" alt="lolbert.jpeg" />
+</p>
+</blockquote>
+
+<blockquote>
+<p>
+REPORTER: &ldquo;Sydney Sweeney is a registered Republican&#x2026;&rdquo;
+</p>
+
+<p>
+POTUS: &ldquo;Oh, now I love her ad&#x2026;If she is a registered Republican, I think her ad is fantastic.&rdquo; 😆
+</p>
+
+<p>
+&#x2026;
+</p>
+
+<p>
+<a href="https://x.com/real_mahalingam/status/1952192602620719554">https://x.com/real_mahalingam/status/1952192602620719554</a>
+&ldquo;IF she is a registered Republican, I think her ad is fantastic&rdquo;
+</p>
+
+<p>
+Lolbert-pilled.
+</p>
+</blockquote>
+
+<blockquote>
+<p>
+<a href="https://x.com/Me_Predictor/status/1953096848832405637">https://x.com/Me_Predictor/status/1953096848832405637</a>
+super poker game going on.  Trump is like the bully with a lot of existing chips playing bluff to getting everyone else to fold without neccesarily playing based on the cards.  but we have just moved from the blinds to the flop, still two rounds left
+</p>
+
+<p>
+its a very entertaining style of play in poker but not neccesarily the most rational way to play.  i know it because i also play this way🤣
+</p>
+</blockquote>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1953534461204914317">Twitter</a></p>
+</p>
+
+<p>
+The wignats have chanced upon Big-braining theory. NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought continues to gain followers.
+</p>
+
+<blockquote>
+<p>
+<a href="https://x.com/GroyperBeam/status/1953520462538932713">https://x.com/GroyperBeam/status/1953520462538932713</a>
+I dont like how many rightwingers, usually big accounts dabble in useless spheres just to search for hot takes, trying to reach a higher plane of understanding, they dont know or care that these hot takes are usually a botched defense of liberalism or straight up wrong.
+</p>
+</blockquote>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-13 Wed 21:08</p>
+<p class="date">Created: 2025-08-14 Thu 02:45</p>
 </div>
 </body>
 </html>
